templates/website-web-nix_template.yaml
---
# Source: website-web-nix/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: release-name-website-web-nix
  labels:
    helm.sh/chart: website-web-nix-0.1.1
    app.kubernetes.io/name: website-web-nix
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    acme.kubernetes.io/dns: dns_linode_v4
    acme.kubernetes.io/enable: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Authorization "Bearer x";
      proxy_set_header Cookie "";
      proxy_hide_header Set-Cookie;
      if ($host = web.nix.co.il) {
        return 301 https://nix.co.il/;
      }
      location = / {
        set $targetx 'cn6415d3njgjjb63z6jrese7ho';
        if ( $arg_kix != "n" ) {
          set $kix b;
        }
        if ( $arg_redirect_to != "" ) {
          set $kix a$kix;
        }
        if ( $arg_redirect_to ~* "^%2Fnix%2Fpl%2F(.+)$" ) {
          set $targetx $1;
        }
        if ( $kix = ab ) {
          return 302 https://kix.co.il/?nix=y&redirect_to=$arg_redirect_to;
        }
        add_header Set-Cookie "MMUSERID=wvf5bamvs4iitcrsm2hujc7pyy; Path=/; Secure";
        add_header Set-Cookie "MMCSRF=f0hzlasu2uu6s9zai93idw5t8e; Path=/; Secure";
        return 302 https://nix.co.il/nix/pl/$targetx;
      }
      location = /blog/phantom {
        return 302 https://nix.co.il/nix/pl/a8mfohxyjbbyzd4xzkcjnnrhdy;
      }
      location ~ ^/api/v4/users$ {
        return 200 "[{\"id\":\"jpm573upfjr15xkddbi5en87ko\",\"create_at\":1604009326000,\"update_at\":1604010211924,\"delete_at\":0,\"username\":\"nix-website\",\"auth_data\":\"\",\"auth_service\":\"\",\"email\":\"\",\"nickname\":\"\",\"first_name\":\"\",\"last_name\":\"\",\"position\":\"\",\"roles\":\"system_user\",\"last_picture_update\":1604009326934,\"locale\":\"en\",\"timezone\":{\"automaticTimezone\":\"Asia/Jerusalem\",\"manualTimezone\":\"\",\"useAutomaticTimezone\":\"true\"},\"is_bot\":t [...]
      }
      if ( $arg_url ~* "^(https://kix.co.il/api/v4/image?url=|https%3A%2F%2Fkix.co.il%2Fapi%2Fv4%2Fimage%3Furl%3D)(.+)$" ) {
        set_unescape_uri $uurl $2;
        return 302 https://nix.co.il/api/v4/image?url=$uurl;
      }
      if ($request_method = POST) {
        set $post_marker x;
      }
      if ($request_uri = /api/v4/users/ids) {
        set $post_marker z$post_marker;
      }
      if ($request_uri = /api/v4/users/usernames) {
        set $post_marker z$post_marker;
      }
      if ($request_uri = /api/v4/roles/names) {
        set $post_marker z$post_marker;
      }
      if ($request_uri = /api/v4/channels/members/me/view) {
        set $post_marker z$post_marker;
      }
      if ($post_marker = x) {
        return 405;
      }
      if ($request_method = DELETE) {
        return 405;
      }
      if ($request_method = PUT) {
        return 405;
      }
spec:
  tls:
    - hosts:
        - "nix.co.il"
        - "www.nix.co.il"
        - "web.nix.co.il"
      secretName: nix-co-il-tls
  rules:
    - host: "nix.co.il"
      http:
        paths:
          - path: /
            backend:
              serviceName: mattermost-team-edition
              servicePort: 8065
    - host: "web.nix.co.il"
      http:
        paths:
          - path: /
            backend:
              serviceName: mattermost-team-edition
              servicePort: 8065
---
# Source: website-web-nix/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-website-web-nix-test-connection"
  labels:
    helm.sh/chart: website-web-nix-0.1.1
    app.kubernetes.io/name: website-web-nix
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-website-web-nix:8065']
  restartPolicy: Never
